# gitee-cli

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  README.md  README_CN.md
.agents/skills/release-pr/: SKILL.md
.agents/skills/release-pr/agents/: openai.yaml
.github/workflows/: release.yml
skills/using-gitee-cli/: SKILL.md
skills/using-gitee-cli/references/: auth.md  commands.md  issue.md  pr.md  repo.md
src/: auth.rs  cli.rs  command.rs  config.rs  credentials.rs  gitee_api.rs  issue.rs  lib.rs  main.rs  pr.rs  repo.rs  repo_context.rs
tests/: auth_cli.rs  cli_compat_cli.rs  cli_edge_cases_cli.rs  help_cli.rs  issue_cli.rs  pr_checkout_cli.rs  pr_comment_cli.rs  pr_create_cli.rs  pr_edit_cli.rs  pr_list_cli.rs  pr_status_cli.rs  pr_view_cli.rs  repo_clone_cli.rs  repo_view_cli.rs  version_cli.rs
