[package]
name = "gitee-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "gitee"
path = "src/main.rs"

[dependencies]
clap = "4.5.37"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0.16"
httpmock = "0.7.0"
predicates = "3.1.3"
serde_json = "1.0.140"
tempfile = "3.20.0"
