[package]
name = "gitee-cli"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Agent-first CLI for gitee.com workflows"
readme = "README.md"
repository = "https://github.com/hex2dec/gitee-cli"
homepage = "https://github.com/hex2dec/gitee-cli"
rust-version = "1.94.0"
keywords = ["gitee", "cli", "git", "automation"]
categories = ["command-line-utilities"]

[[bin]]
name = "gitee"
path = "src/main.rs"

[dependencies]
clap = "4.5.37"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"

[dev-dependencies]
assert_cmd = "2.0.16"
httpmock = "0.7.0"
predicates = "3.1.3"
serde_json = "1.0.140"
tempfile = "3.20.0"
